# sailboat_gazebo

./: README.md
motion_control/: CMakeLists.txt  package.xml
motion_control/launch/: vrx_and_navigation
motion_control/nodes/: twist_control.py
sailboat_description/: CMakeLists.txt  package.xml
sailboat_description/config/: config.yaml
sailboat_description/launch/: sailboat_rviz.launch
sailboat_description/mesh/: eca_fin.stl  fin.stl  keel.stl  pt90.stl  rudder.stl  sail.dae
sailboat_description/rviz/: sailboat_urdf.rviz
sailboat_description/urdf/: sailboat_base.urdf.xacro  sailboat_base_with_motor.urdf.xacro  sailboat_base_with_motor_and_uuv_fin.urdf.xacro
sailboat_gazebo/: CMakeLists.txt  package.xml
sailboat_gazebo/include/: LiftDragPluginNboat.h  LiftDragPluginNboatSail.h
sailboat_gazebo/launch/: sailboat.launch  sailboat_empty.launch  sailboat_empty.xml  sailboat_with_motor.launch  spawn_sailboat.launch  spawn_sailboat2.launch  spawn_world.launch
sailboat_gazebo/src/: LiftDragPluginNboat.cc  LiftDragPluginNboatSail.cc
sailboat_gazebo/urdf/: macros.xacro  sailboat_gazebo.urdf.xacro  sailboat_gazebo.xacro
sailboat_gazebo/urdf/dynamics/: sailboat_gazebo_dynamics_plugin.xacro
sailboat_gazebo/urdf/sensors/: sailboat_3d_lidar.xacro  sailboat_camera.xacro  sailboat_gps.xacro  sailboat_imu.xacro  sailboat_p3d.xacro  sailboat_planar_lidar.xacro
sailboat_teleop/: CMakeLists.txt  package.xml
sailboat_teleop/launch/: sony_dualshock3.launch  sony_dualshock3_motor.launch
sailboat_teleop/src/: sailboat_teleop.cpp  sailboatmotor_teleop.cpp
uuv_gazebo_plugins/uuv_gazebo_plugins/src/: FinPlugin.cc
