<?xml version="1.0"?>
<package format="2">
  <name>sailboat_gazebo</name>
  <version>1.0.1</version>
  <description>
    Provides templates and examples for integrating the sailboat model into gazebo with dynamics, sensors, etc.
  </description>
  <maintainer email="davihenriqueds@gmail.com">Davi Henrique</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://wiki.ros.org/sailboat_gazebo</url>
  <author email="davihenriqueds@gmail.com">Davi Henrique</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_plugins</depend>
  <depend>hector_gazebo_plugins</depend>
  <depend>robot_localization</depend>
  <depend>usv_gazebo_plugins</depend>
  <depend>velodyne_gazebo_plugins</depend>
  <depend>sailboat_description</depend>
  <depend>xacro</depend>
</package>